@@ -1,6 +1,11 @@
 2006-10-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
 
 	* flumotion/component/dvb/dvb.py:
+	Only scale if requested.  Add videorate and audiorate.
+
+2006-10-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
+
+	* flumotion/component/dvb/dvb.py:
 	Actually fix the pipeline template.
 
 2006-10-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
